<resources>
    <string name="app_name">ButtonLogic</string>
    <string name="generate">Generate</string>
    <string name="userInput">Enter value upto 100</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="subTitle">Select orientation to preview button</string>
    <string name="get_button_preview">Get Button Preview</string>
</resources>
