<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.example.anand.previewbuttonsasmuchuserwant.MainActivity">

    <TextView
        android:id="@+id/tv_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/get_button_preview"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btn_genrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_Title"
        android:layout_marginTop="10dp"
        android:text="@string/generate"
        android:textAllCaps="false"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/et_userInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_Title"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/btn_genrate"
        android:ems="3"
        android:hint="@string/userInput"
        android:inputType="numberSigned" />

    <TextView
        android:id="@+id/tv_subTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_genrate"
        android:layout_marginTop="20sp"
        android:text="@string/subTitle"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/rg_orientation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_subTitle">

        <RadioButton
            android:id="@+id/rb_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vertical"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horizontal" />

    </RadioGroup>

    <View
        android:id="@+id/v_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/rg_orientation"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/v_divider"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:id="@+id/sv_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp">

                <LinearLayout
                    android:id="@+id/v_preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:background="@color/backGround"
                    android:orientation="vertical" />
            </ScrollView>

        </LinearLayout>

    </HorizontalScrollView>


</RelativeLayout>
